src/core/css/panel/panel-sizing.css
.fg-panel-content,
.fg-panel-info,
.fg-panel-cart,
.fg-panel-thumbs,
.fg-panel-content-inner,
.fg-panel-info-inner,
.fg-panel-cart-inner,
.fg-panel-thumbs-inner {
    position: relative;
    width: 100%;
    height: 100%;
    max-width: 100%;
    max-height: 100%;
}
.fg-panel-content,
.fg-panel-info,
.fg-panel-cart,
.fg-panel-thumbs {
    pointer-events: none;
}

.fg-panel-content-inner,
.fg-panel-info-inner,
.fg-panel-cart-inner,
.fg-panel-thumbs-inner {
    pointer-events: auto;
    display: flex;
    overflow: hidden;
}

/* By default collapse and overlay the caption along the bottom on small screens */
.fg-panel-info-inner {
    position: absolute;
    top: unset;
    bottom: 0;
    left: 0;
    right: 0;
    height: auto;
    min-height: 42px;
}
.fg-panel.fg-landscape .fg-panel-info-inner,
.fg-panel.fg-landscape .fg-panel-info-inner {
    right: 37px;
    width: calc(100% - 37px);
    max-width: calc(100% - 37px);
}
.fg-panel.fg-portrait .fg-panel-info-inner,
.fg-panel.fg-portrait .fg-panel-info-inner {
    max-height: calc(100% - 37px);
}
.fg-landscape.fg-panel-info-top .fg-panel-info-inner {
    top: 0;
    bottom: unset;
}
.fg-portrait.fg-panel-info-top .fg-panel-info-inner {
    top: 37px;
    bottom: unset;
}
.fg-panel.fg-medium .fg-panel-info-inner,
.fg-panel.fg-panel-no-mobile .fg-panel-info-inner {
    position: relative;
    top: unset;
    bottom: unset;
    left: unset;
    right: unset;
    width: 100%;
    height: 100%;
    max-width: 100%;
    max-height: 100%;
}

/* Caption Overlay */
.fg-medium.fg-panel-info-right.fg-panel-info-overlay .fg-panel-info-inner,
.fg-panel-no-mobile.fg-panel-info-right.fg-panel-info-overlay .fg-panel-info-inner {
    position: absolute;
    top: 0;
    right: 0;
}
.fg-medium.fg-panel-info-bottom.fg-panel-info-overlay .fg-panel-info-inner,
.fg-panel-no-mobile.fg-panel-info-bottom.fg-panel-info-overlay .fg-panel-info-inner {
    position: absolute;
    bottom: 0;
    left: 0;
}
.fg-medium.fg-panel-info-top.fg-panel-info-overlay .fg-panel-info-inner,
.fg-medium.fg-panel-info-bottom.fg-panel-info-overlay .fg-panel-info-inner,
.fg-panel-no-mobile.fg-panel-info-top.fg-panel-info-overlay .fg-panel-info-inner,
.fg-panel-no-mobile.fg-panel-info-bottom.fg-panel-info-overlay .fg-panel-info-inner {
    height: auto;
}

/* Sizing of the side content and thumbs */
.fg-panel-thumbs-left .fg-panel-thumb,
.fg-panel-thumbs-right .fg-panel-thumb,
.fg-panel-thumbs-top .fg-panel-thumbs-inner,
.fg-panel-thumbs-bottom .fg-panel-thumbs-inner {
    height: 70px;
    min-height: 70px;
}
.fg-panel-thumbs-top .fg-panel-thumb,
.fg-panel-thumbs-bottom .fg-panel-thumb,
.fg-panel-thumbs-left .fg-panel-thumbs-inner,
.fg-panel-thumbs-right .fg-panel-thumbs-inner {
    width: 100px;
    min-width: 100px;
}
.fg-panel-thumbs-top.fg-panel-thumbs-small .fg-panel-thumb,
.fg-panel-thumbs-bottom.fg-panel-thumbs-small .fg-panel-thumb,
.fg-panel-thumbs-left.fg-panel-thumbs-small .fg-panel-thumbs-inner,
.fg-panel-thumbs-right.fg-panel-thumbs-small .fg-panel-thumbs-inner {
    width: 70px;
    min-width: 70px;
}
.fg-medium.fg-panel-thumbs-left .fg-panel-thumb,
.fg-medium.fg-panel-thumbs-right .fg-panel-thumb,
.fg-medium.fg-panel-thumbs-top .fg-panel-thumbs-inner,
.fg-medium.fg-panel-thumbs-bottom .fg-panel-thumbs-inner {
    height: 82px;
    min-height: 82px;
}
.fg-medium.fg-panel-thumbs-top .fg-panel-thumb,
.fg-medium.fg-panel-thumbs-bottom .fg-panel-thumb,
.fg-medium.fg-panel-thumbs-left .fg-panel-thumbs-inner,
.fg-medium.fg-panel-thumbs-right .fg-panel-thumbs-inner {
    width: 118px;
    min-width: 118px;
}
.fg-x-large-width.fg-panel-thumbs-top .fg-panel-thumb,
.fg-x-large-width.fg-panel-thumbs-bottom .fg-panel-thumb,
.fg-x-large-width.fg-panel-thumbs-left .fg-panel-thumbs-inner,
.fg-x-large-width.fg-panel-thumbs-right .fg-panel-thumbs-inner {
    width: 138px;
    min-width: 138px;
}
.fg-medium.fg-panel-thumbs-top.fg-panel-thumbs-small .fg-panel-thumb,
.fg-medium.fg-panel-thumbs-bottom.fg-panel-thumbs-small .fg-panel-thumb,
.fg-medium.fg-panel-thumbs-left.fg-panel-thumbs-small .fg-panel-thumbs-inner,
.fg-medium.fg-panel-thumbs-right.fg-panel-thumbs-small .fg-panel-thumbs-inner,
.fg-x-large-width.fg-panel-thumbs-top.fg-panel-thumbs-small .fg-panel-thumb,
.fg-x-large-width.fg-panel-thumbs-bottom.fg-panel-thumbs-small .fg-panel-thumb,
.fg-x-large-width.fg-panel-thumbs-left.fg-panel-thumbs-small .fg-panel-thumbs-inner,
.fg-x-large-width.fg-panel-thumbs-right.fg-panel-thumbs-small .fg-panel-thumbs-inner {
    width: 82px;
    min-width: 82px;
}
/*.fg-large-width.fg-panel-thumbs-top.fg-panel-thumbs-no-captions:not(.fg-panel-thumbs-small) .fg-panel-thumb,*/
/*.fg-large-width.fg-panel-thumbs-bottom.fg-panel-thumbs-no-captions:not(.fg-panel-thumbs-small) .fg-panel-thumb,*/
/*.fg-large-width.fg-panel-thumbs-left.fg-panel-thumbs-no-captions:not(.fg-panel-thumbs-small) .fg-panel-thumbs-inner,*/
/*.fg-large-width.fg-panel-thumbs-right.fg-panel-thumbs-no-captions:not(.fg-panel-thumbs-small) .fg-panel-thumbs-inner {*/
/*    width: 118px;*/
/*    min-width: 118px;*/
/*}*/
/*.fg-x-large-width.fg-panel-thumbs-top.fg-panel-thumbs-no-captions:not(.fg-panel-thumbs-small) .fg-panel-thumb,*/
/*.fg-x-large-width.fg-panel-thumbs-bottom.fg-panel-thumbs-no-captions:not(.fg-panel-thumbs-small) .fg-panel-thumb,*/
/*.fg-x-large-width.fg-panel-thumbs-left.fg-panel-thumbs-no-captions:not(.fg-panel-thumbs-small) .fg-panel-thumbs-inner,*/
/*.fg-x-large-width.fg-panel-thumbs-right.fg-panel-thumbs-no-captions:not(.fg-panel-thumbs-small) .fg-panel-thumbs-inner {*/
/*    width: 138px;*/
/*    min-width: 138px;*/
/*}*/

.fg-medium.fg-panel-info-left .fg-panel-info-inner,
.fg-medium.fg-panel-info-right .fg-panel-info-inner,
.fg-medium.fg-panel-cart-left .fg-panel-cart-inner,
.fg-medium.fg-panel-cart-right .fg-panel-cart-inner,
.fg-medium.fg-panel-thumbs-top:not(.fg-panel-thumbs-no-captions) .fg-panel-thumb,
.fg-medium.fg-panel-thumbs-bottom:not(.fg-panel-thumbs-no-captions) .fg-panel-thumb,
.fg-medium.fg-panel-thumbs-left:not(.fg-panel-thumbs-no-captions) .fg-panel-thumbs-inner,
.fg-medium.fg-panel-thumbs-right:not(.fg-panel-thumbs-no-captions) .fg-panel-thumbs-inner {
    width: 200px;
    min-width: 200px;
}
.fg-medium.fg-large-width.fg-panel-info-left .fg-panel-info-inner,
.fg-medium.fg-large-width.fg-panel-info-right .fg-panel-info-inner,
.fg-medium.fg-large-width.fg-panel-cart-left .fg-panel-cart-inner,
.fg-medium.fg-large-width.fg-panel-cart-right .fg-panel-cart-inner,
.fg-medium.fg-large-width.fg-panel-thumbs-top:not(.fg-panel-thumbs-no-captions) .fg-panel-thumb,
.fg-medium.fg-large-width.fg-panel-thumbs-bottom:not(.fg-panel-thumbs-no-captions) .fg-panel-thumb,
.fg-medium.fg-large-width.fg-panel-thumbs-left:not(.fg-panel-thumbs-no-captions) .fg-panel-thumbs-inner,
.fg-medium.fg-large-width.fg-panel-thumbs-right:not(.fg-panel-thumbs-no-captions) .fg-panel-thumbs-inner {
    width: 240px;
    min-width: 240px;
}
.fg-medium.fg-x-large-width.fg-panel-info-left .fg-panel-info-inner,
.fg-medium.fg-x-large-width.fg-panel-info-right .fg-panel-info-inner,
.fg-medium.fg-x-large-width.fg-panel-cart-left .fg-panel-cart-inner,
.fg-medium.fg-x-large-width.fg-panel-cart-right .fg-panel-cart-inner,
.fg-medium.fg-x-large-width.fg-panel-thumbs-top:not(.fg-panel-thumbs-no-captions) .fg-panel-thumb,
.fg-medium.fg-x-large-width.fg-panel-thumbs-bottom:not(.fg-panel-thumbs-no-captions) .fg-panel-thumb,
.fg-medium.fg-x-large-width.fg-panel-thumbs-left:not(.fg-panel-thumbs-no-captions) .fg-panel-thumbs-inner,
.fg-medium.fg-x-large-width.fg-panel-thumbs-right:not(.fg-panel-thumbs-no-captions) .fg-panel-thumbs-inner {
    width: 280px;
    min-width: 280px;
}

